--- a/RockWeb/Styles/styles-v2-prototype/components/_labels.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_labels.scss
@@ -21,7 +21,7 @@
   text-align:     center;
   white-space:    nowrap;
   vertical-align: baseline;
-  border-radius:  .25em;
+  border-radius:  var(--rounded-small);
 
   // Add hover effects, but only for links
   a & {
