+ (Core) Fixed an issue where star ratings didn’t fill on hover or when selected if the font weight was set to Regular in the Theme Styler. (Fixes #6353)

--- a/RockWeb/Styles/FontAwesome/_rock-upgrade-map-classes.less
+++ b/RockWeb/Styles/FontAwesome/_rock-upgrade-map-classes.less
@@ -41,12 +41,15 @@
 
 // overrides for key icons
 .fa.fa-rating-selected:before,
+.fa.fa-star-filled:before,
 .fa.fa-rating-on:before {
+  font-weight: 900;
   content: @fa-var-star;
 }
 
 
 .fa.fa-rating-unselected:before,
+.fa.fa-star-outline:before,
 .fa.fa-rating-off:before {
   font-weight: @fa-theme-weight-outline;
   content: @fa-var-star;
