- update the tooltip styling in scss to match the styling in less.

--- a/RockWeb/Styles/styles-v2-prototype/components/_tooltip.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_tooltip.scss
@@ -116,6 +116,7 @@
   text-align:       center;
   background-color: var(--color-interface-stronger);
   border-radius:    var(--rounded-small);
+  word-break:       break-word;
 }
 
 // Arrows
