--- a/Rock.JavaScript/src/streamchat/chatComponent.css
+++ b/Rock.JavaScript/src/streamchat/chatComponent.css
@@ -55,8 +55,12 @@
 .rock-chat-window-content-left {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
     min-height: 0;
+    width: 100%;
+}
+
+.rock-chat-window--with-pane .rock-chat-window-content-left {
+    width: 70%;
 }
 
 .rock-chat-window-content-left>.str-chat__message-list {
@@ -478,7 +482,7 @@
 }
 
 .rocktheme-community .str-chat__list .str-chat__message-list-scroll .str-chat__li {
-    padding-inline: 1.5rem !important;
+    padding-inline: 0 !important;
     margin-inline: 0 !important;
 }
 
@@ -610,7 +614,7 @@
 .rocktheme-community .rock-chat-window--with-pane .rock-chat-window-content-right {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 30%;
     height: 100%;
     border-left: 1px solid var(--color-interface-soft);
     background-color: var(--color-interface-softest);
@@ -635,7 +639,7 @@
 }
 
 .rocktheme-community .str-chat__li:hover:not(:has(.str-chat__reaction-list:hover, .str-chat__modal--open)) {
-    background-color: var(--color-interface-softer);
+    /* background-color: var(--color-interface-softer); */
 }
 
 .rocktheme-community .rock-message-container .rock-message-layout {
@@ -679,8 +683,9 @@
 .rocktheme-community .rock-message-wrapper {
     position: relative;
     display: flex;
-    padding-right: 2rem;
-    /* space for the hover actions */
+    padding-inline: 1.5rem !important;
+    padding-right: 1.5rem !important;
+    --str-chat__message-reaction-background-color: var(--color-interface-softer);
 }
 
 .rocktheme-community .rock-message-actions {
@@ -696,6 +701,7 @@
     border: 1px solid var(--color-interface-soft);
     border-radius: 4px;
     padding: 2px;
+    margin-right: 1.5rem;
 }
 
 .rocktheme-community .rock-message-action {
@@ -720,7 +726,14 @@
     background: var(--color-interface-soft);
 }
 
-.rocktheme-community .rock-message-wrapper:hover .rock-message-actions {
+.rocktheme-community .rock-message-wrapper:hover,
+.rocktheme-community .rock-message-wrapper[data-dialog-open="true"] {
+    background-color: var(--color-interface-softer);
+    --str-chat__message-reaction-background-color: var(--color-interface-softest);
+}
+
+.rocktheme-community .rock-message-wrapper:hover .rock-message-actions,
+.rocktheme-community .rock-message-wrapper[data-dialog-open="true"] .rock-message-actions {
     opacity: 1;
     pointer-events: auto;
 }
@@ -729,6 +742,27 @@
     font-size: 12px;
     color: var(--color-interface-strong);
     line-height: 1.25rem;
+}
+
+.str-chat {
+    --str-chat__message-reactions-options-box-shadow: none;
+    --str-chat__message-reactions-options-border-radius: 4px;
+}
+
+/* Message Reactions */
+.str-chat__message-reaction-selector .str-chat__message-reactions-options .str-chat__message-reactions-option {
+    width: calc(var(--str-chat__spacing-px)*24);
+    height: calc(var(--str-chat__spacing-px)*24);
+    --str-chat__stream-emoji-size: 16px;
+}
+
+.str-chat__reaction-selector .str-chat__message-reactions-options {
+    border: 1px solid var(--color-interface-soft);
+    background-color: var(--color-interface-softest);
+}
+
+.str-chat__message-reactions-container .str-chat__message-reactions {
+    gap: 6px;
 }
 
 /* Replies Content */
@@ -803,9 +837,21 @@
     flex-direction: column;
     margin-inline: 1.5rem;
     margin-bottom: 1.5rem;
+    margin-right: 1.5rem;
     background-color: var(--color-interface-softer);
     border: 1px solid var(--color-interface-soft);
     border-radius: 4px;
+}
+
+.rocktheme-community .rock-message-composer-input {
+    background-color: var(--color-interface-softest);
+    border-radius: 4px;
+}
+
+.rock-community-message-input {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
 }
 
 .rocktheme-community .rock-message-input-container {
@@ -818,6 +864,7 @@
     max-height: 100%;
     background-color: var(--color-interface-softest);
     padding: 6px;
+    border-radius: 4px;
 }
 
 .rocktheme-community .rock-message-input-container .str-chat__message-textarea {
@@ -833,17 +880,37 @@
     border-radius: 4px;
 }
 
-.rocktheme-community .rock-message-composer .rock-message-composer-actions {
+.rocktheme-community .rock-message-composer .rock-message-composer-footer .rock-message-composer-actions {
     display: flex;
     gap: 4px;
     align-items: center;
     padding: 4px;
 }
 
-.rocktheme-community .rock-message-composer>.rock-message-composer-actions>.rock-message-composer-action {
+.rock-message-composer-input {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    align-items: center;
+}
+
+.str-chat__attachment-preview-list .str-chat__attachment-preview-file {
+    background-color: var(--color-interface-softest);
+}
+
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-send {
+    padding: 4px;
+}
+
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-send .rock-send-button {
     background: none;
     border: none;
-    cursor: pointer;
     height: 24px;
     width: 24px;
     color: var(--color-interface-stronger);
@@ -853,19 +920,46 @@
     justify-content: center;
 }
 
-.rock-message-composer-input {
-    display: flex;
-    gap: 4px;
-    align-items: center;
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-send .rock-send-button>i {
+    font-size: 14px;
 }
 
-.rocktheme-community .rock-message-composer>.rock-message-composer-actions>.rock-message-composer-action:hover {
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-send .rock-send-button:disabled {
+    color: var(--color-interface-medium);
+    cursor: not-allowed;
+}
+
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-send .rock-send-button:not(:disabled):hover {
+    background-color: var(--color-interface-soft);
+    cursor: pointer;
+}
+
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-actions .rock-message-composer-action {
+    background: none;
+    border: none;
+    cursor: pointer;
+    height: 24px;
+    width: 24px;
+    color: var(--color-interface-strong);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-actions .rock-message-composer-action:hover {
     background: var(--color-interface-soft);
 }
 
-.rocktheme-community .rock-message-composer>.rock-message-composer-actions>.rock-message-composer-action>i {
-    color: var(--color-interface-stronger);
+.rocktheme-community .rock-message-composer>.rock-message-composer-footer>.rock-message-composer-actions .rock-message-composer-action>i {
+    color: var(--color-interface-strong);
     font-size: 14px;
+}
+
+.str-chat__file-input-container {
+    width: 24px;
+    height: 24px;
+    display: flex;
 }
 
 /* bc todo: look into what this is for */
@@ -873,22 +967,22 @@
     display: none;
 }
 
-/* ============ Create Channel Modal =============== */
+/* ============ Modals =============== */
 
-.create-channel-modal-overlay {
+.rock-chat-modal-backdrop {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 1000;
 }
 
-.create-channel-modal-content {
+.rock-chat-modal-content {
     background: var(--color-interface-softest, #fff);
     border-radius: 8px;
     width: 400px;
@@ -896,28 +990,123 @@
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
     color: var(--color-interface-stronger, #000);
     display: flex;
+    gap: 24px;
+    flex-direction: column;
+    padding: 16px;
+}
+
+.rock-chat-modal-content .rock-chat-modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.rock-chat-modal-content .rock-chat-modal-header .rock-chat-modal-title {
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--color-interface-stronger, #000);
+    margin: 0;
+}
+
+.rock-chat-modal-content .rock-chat-modal-header .rock-chat-modal-close {
+    background: none;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    color: inherit;
+}
+
+.rock-chat-modal-content .create-channel-modal-content {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.rock-chat-modal-content .create-channel-modal-label {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--color-interface-stronger, #000);
+    margin: 0px 0px 6px 0px;
+    line-height: 1;
+}
+
+/* Add Link Modal */
+
+.rock-add-link-modal-fieldset {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    border: none;
+    padding: 0;
+}
+
+.rock-add-link-modal-content {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.rock-add-link-modal-field-row {
+    display: flex;
     flex-direction: column;
 }
 
+.rock-add-link-modal-input {
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid var(--color-interface-soft);
+    min-height: 2.5rem;
+    padding: .5rem .9375rem;
+    width: 100%;
+}
+
+.rock-add-link-modal-field-row-label {
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--color-interface-strong);
+}
+
+.rock-add-link-modal-actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 8px;
+}
+
+.rock-add-link-modal-button-secondary {
+    background: var(--color-interface-soft);
+    color: var(--color-interface-stronger);
+    border: none;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.rock-add-link-modal-button-secondary:hover {
+    background: var(--color-interface-softer);
+}
+
+.rock-add-link-modal-button-primary {
+    background: var(--color-primary);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+/* Create Channel Modal */
 .create-channel-modal-header,
 .create-channel-modal-footer {
-    padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .create-channel-modal-body {
-    padding: 1rem;
     flex: 1;
     position: relative;
-}
-
-.create-channel-modal-header-title {
-    font-size: 1.25rem;
-    font-weight: 600;
-    color: var(--color-interface-stronger, #000);
-    margin: 0;
 }
 
 .create-channel-modal-close {
@@ -966,7 +1155,6 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 4px;
-    margin-top: 0.5rem;
     padding: 4px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -1048,4 +1236,79 @@
 
 .create-channel-modal-search-results li:hover {
     background: rgba(0, 0, 0, 0.05);
+}
+
+/* Right Pane */
+.rocktheme-community .rock-channel-right-pane {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.rock-channel-right-pane-content {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.str-chat__thread-container.str-chat__thread {
+    height: 100%;
+    width: 100%;
+}
+
+.str-chat__thread .str-chat__main-panel-inner {
+    height: 100%;
+}
+
+.str-chat__list .str-chat__message-list-scroll .str-chat__parent-message-li {
+    margin-inline: 0;
+}
+
+.rock-channel-right-pane-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px;
+    border-bottom: 1px solid var(--color-interface-soft);
+    background-color: var(--color-interface-softest);
+}
+
+.rock-channel-right-pane-header .rock-channel-right-pane-title {
+    font-size: 12px;
+    font-weight: 600;
+    color: var(--color-interface-stronger);
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+}
+
+
+.rock-channel-right-pane-header-title-layout {
+    display: flex;
+    gap: 4px;
+    align-items: center;
+}
+
+.rock-channel-right-pane-header-title-layout i {
+    font-size: 14px;
+    color: var(--color-interface-stronger);
+}
+
+.rocktheme-community .rock-channel-right-pane-header .rock-channel-right-pane-close {
+    background: none;
+    border: none;
+    color: var(--color-interface-stronger);
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    height: 24px;
+    width: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.rocktheme-community .rock-channel-right-pane-header .rock-channel-right-pane-close:hover {
+    background: var(--color-interface-soft);
 }
