--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -729,6 +729,9 @@ textarea,
 
     & .panel-title {
       font-size: var(--font-size-h5);
+      overflow:           hidden;
+      text-overflow:      ellipsis;
+      white-space:        nowrap;
     }
   }
 
