--- a/Rock.JavaScript/src/streamchat/styles/components/components.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/components.scss
@@ -9,3 +9,7 @@
 @use 'message.scss';
 @use 'modal.scss';
 @use 'reactions.scss';
+@use 'channel-thread-list-item.scss';
+@use 'channel-thread-list.scss';
+@use 'window.scss';
+@use 'message-search.scss';
